<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget03"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:keepScreenOn="true" >

    <ImageView
        android:id="@+id/circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/color/transparent"
        android:contentDescription="@string/circle"
        android:src="@drawable/circle" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#00FF00"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/mode12"
            android:textColor="#000FFF"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/btn_state"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#00FF00"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btnS2"
            android:textColor="#000FFF"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_state"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_x"
                    android:textColor="#0000FF" />

                <TextView
                    android:id="@+id/accel_x"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0000FF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_y"
                    android:textColor="#0000FF" />

                <TextView
                    android:id="@+id/accel_y"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0000FF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_z"
                    android:textColor="#0000FF" />

                <TextView
                    android:id="@+id/accel_z"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0000FF" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/pause_start"
            android:text="@string/btn_pause"
            android:textColor="#000FFF"
            android:textSize="26sp" />
    </RelativeLayout>

</FrameLayout>