<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget04"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:keepScreenOn="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#00FF00"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/mode13"
            android:textColor="#000FFF"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/btn_state"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#00FF00"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btnS2"
            android:textColor="#000FFF"
            android:textSize="26sp" />

        <LinearLayout
            android:id="@+id/btn_array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/btn_reset"
                android:textColor="#000FFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/btn_pause"
                android:textColor="#000FFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/btnS"
                android:textColor="#000FFF"
                android:textSize="22sp" />
        </LinearLayout>

        <com.ThinBTClientDemo.www.MyPaintView
            android:id="@+id/view_paint"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/btn_array"
            android:layout_below="@id/btn_state"
            android:layout_margin="15dp"
            android:background="@color/white" />
    </RelativeLayout>

</FrameLayout>