<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget01"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    tools:context=".MainActivity">

 	<LinearLayout
 	    android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/txt01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/rect_gray_3"
            android:textColor="#000000"
            android:text="@string/txt01"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/txt02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/rect_gray_3"
            android:textColor="#000000"
            android:text="@string/txt02"
            android:textSize="24sp" />
    </LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:orientation="vertical" >
        <!-- 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:text="@string/txt03"
            android:textSize="20sp" />
            
             -->

        <Button
            android:id="@+id/btn01"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            style="@style/list_item_top"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="#000000"
            android:text="@string/mode01" />

        <Button
            android:id="@+id/btn02"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            style="@style/list_item_middle"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="#000000"
            android:text="@string/mode02" />

        <Button
            android:id="@+id/btn03"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            style="@style/list_item_bottom"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="#000000"
            android:text="@string/mode03" />

    </LinearLayout>

</LinearLayout>